blimp/client/app/linux/blimp_client_session_linux.h
@@ -7,6 +7,7 @@
 
 #include "base/macros.h"
 #include "blimp/client/app/linux/blimp_display_manager.h"
+#include "blimp/client/feature/ime_feature.h"
 #include "blimp/client/feature/navigation_feature.h"
 #include "blimp/client/session/blimp_client_session.h"
 
@@ -31,6 +32,7 @@ class BlimpClientSessionLinux : public BlimpClientSession,
   std::unique_ptr<BlimpDisplayManager> blimp_display_manager_;
   std::unique_ptr<NavigationFeature::NavigationFeatureDelegate>
       navigation_feature_delegate_;
+  std::unique_ptr<ImeFeature::Delegate> ime_feature_delegate_;
 
   DISALLOW_COPY_AND_ASSIGN(BlimpClientSessionLinux);
 };
